--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header {
+  margin: 2em 0 2em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid;
+}
+
+.header a {
+  margin: 0 1em 0 1em;
+  font-size: 1.2em;
+  text-decoration: none;
+}
+
+.content {
+  margin-left: 2em;
+  font-size: 1.5em;
+}
